--- a/frontend/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar.component.html
@@ -17,4 +17,21 @@
     <span>Popular</span>
   </a>
 
+  <div class="dropdown-divider"></div>
+
+  <a href="https://github.com/flowant/website" target="_blank" class="sidebar-link">
+    <span class="fab fa-github"></span>
+    <span>Source Code</span>
+  </a>
+
+  <a href="https://github.com/flowant/website/blob/master/LICENSE" target="_blank" class="sidebar-link">
+    <span class="fab fa-github"></span>
+    <span>License</span>
+  </a>
+
+  <a href="https://github.com/flowant/website/blob/master/LICENSE-THIRD-PARTY" target="_blank" class="sidebar-link">
+    <span class="fab fa-github"></span>
+    <span>License Third Party</span>
+  </a>
+
 </nav>
