--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -5,6 +5,9 @@
   display: -ms-flexbox;
   display: flex;
   align-items: stretch;
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #wrapper #content-wrapper {
