--- a/frontend/src/app/content-ref/content-ref.component.html
+++ b/frontend/src/app/content-ref/content-ref.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="content">
   <div class="card" (click)="onClick()">
     <img *ngIf="content.fileRefs && content.fileRefs.length > 0" class="card-img-top"
-        [src]="imgServerUrl + content.fileRefs[0].uri" alt="Card image cap">
+        [src]="imgServerUrl + content.fileRefs[0].uri" onError="this.src='/assets/img/img-not-available.png';">
     <div class="card-body">
       <span class="card-text">{{content.title}}</span>
     </div>
